--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1,2 +1,43 @@
 // Our CSS reset
-@import url("../node_modules/modern-css-reset/src/reset.css");
+@import '../node_modules/modern-css-reset/src/reset.css';
+
+// Design tokens
+@import 'design-tokens.scss';
+
+// Utilities
+@import './utilities/wrapper';
+@import './utilities/flow';
+@import './utilities/flex';
+
+// Blocks
+@import './blocks/features';
+@import './blocks/button';
+
+body {
+  overflow-x: hidden;
+  line-height: 1.5;
+  padding: map-get($map: $font-sizes, $key: '700');
+  font-size: map-get($map: $font-sizes, $key: '400');
+  background: url(../images/bg-header-desktop.png) center top/100% no-repeat;
+  padding-block-start: 10rem;
+}
+
+h1,
+h2,
+h3 {
+  @extend .color-text-primary;
+}
+
+h1 {
+  font-size: map-get($map: $font-sizes, $key: '700');
+}
+
+ul[role='list'] {
+  padding: 0;
+}
+
+@media (max-width: 400px) {
+  body {
+    background-image: url(../images/bg-header-mobile.png);
+  }
+}
