--- a/scss/utilities/_flow.scss
+++ b/scss/utilities/_flow.scss
@@ -14,4 +14,18 @@
   &-3 {
     --flow-space: 12rem;
   }
+
+  @media (max-width: 600px) {
+    &-1 {
+      --flow-space: 2rem;
+    }
+
+    &-2 {
+      --flow-space: 3rem;
+    }
+
+    &-3 {
+      --flow-space: 12rem;
+    }
+  }
 }
