--- a/scss/blocks/_features.scss
+++ b/scss/blocks/_features.scss
@@ -3,6 +3,7 @@
   grid-template-columns: 1fr 1fr;
   gap: 10rem;
   text-align: start;
+  align-items: center;
 
   .feature-picture {
     $overhang-amount: 10vw;
