--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1,5 +1,5 @@
 // Our CSS resets
-@import '../node_modules/modern-css-reset/dist/reset.css';
+@import '../node_modules/modern-css-reset/dist/reset.min.css';
 @import './reset.scss';
 
 // Design tokens
