--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1,5 +1,4 @@
-// Our CSS resets
-@use '../node_modules/modern-css-reset/dist/reset.min.css';
+// Our CSS reset
 @use './reset.scss';
 
 // Design tokens
