--- a/scss/blocks/_button.scss
+++ b/scss/blocks/_button.scss
@@ -1,9 +1,11 @@
+@use '../design-tokens';
+
 .button {
   padding: 0.75em;
   padding-inline: 2em;
   color: white;
   border: 0;
-  font-size: map-get($font-sizes, '300');
+  font-size: map-get(design-tokens.$font-sizes, '300');
   box-shadow: inset 0 -3px rgba(0, 0, 0, 0.418);
   border-radius: 1.5em;
   font-weight: 600;
