--- a/scss/design-tokens.scss
+++ b/scss/design-tokens.scss
@@ -2,6 +2,7 @@
 $base-font-size: 1.5rem;
 
 $font-sizes: (
+  '200': $base-font-size * 0.33,
   '300': $base-font-size * 0.75,
   '400': $base-font-size,
   '500': $base-font-size * 1.33,
@@ -22,6 +23,8 @@ $fonts: (
     sans-serif,
   ),
 );
+
+$body-padding: map-get($font-sizes, '600');
 
 .text {
   &-center {
@@ -77,6 +80,26 @@ $fonts: (
   max-width: 100%;
 }
 
+.margin-1 {
+  margin: map-get($font-sizes, '300');
+}
+
+.margin-2 {
+  margin: map-get($font-sizes, '700');
+}
+
+.padding-1 {
+  padding: map-get($font-sizes, '600');
+}
+
+.padding-2 {
+  padding: map-get($font-sizes, '700');
+}
+
 .margin-block-1 {
   margin-block: map-get($font-sizes, '600');
+}
+
+.margin-inline-1 {
+  margin-inline: map-get($font-sizes, '600');
 }
