--- a/scss/utilities/_flex.scss
+++ b/scss/utilities/_flex.scss
@@ -13,8 +13,17 @@
     &-start {
       align-items: start;
     }
+
     &-center {
       align-items: center;
+    }
+
+    &-baseline {
+      align-items: baseline;
+
+      @media (max-width: 800px) {
+        align-items: center;
+      }
     }
   }
 
@@ -26,5 +35,13 @@
     &-center {
       justify-content: center;
     }
+
+    &-evenly {
+      justify-content: space-evenly;
+    }
+  }
+
+  &-wrap {
+    flex-wrap: wrap;
   }
 }
