--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -5,7 +5,7 @@
   margin-bottom: -($body-padding);
 
   background-color: rgba(0, 0, 0, 0.1);
-  min-width: 100vw;
+  min-width: 100%;
 
   font-weight: 600;
 
