--- a/scss/global.scss
+++ b/scss/global.scss
@@ -14,6 +14,7 @@
 @use './blocks/button';
 @use './blocks/tools';
 @use './blocks/footer';
+@use './blocks/content';
 
 body {
   position: relative;
