--- a/scss/blocks/_button.scss
+++ b/scss/blocks/_button.scss
@@ -9,6 +9,7 @@
   box-shadow: inset 0 -3px rgba(0, 0, 0, 0.418);
   border-radius: 1.5em;
   font-weight: 600;
+  transition: opacity 300ms;
   cursor: pointer;
 
   @media (max-width: 500px) {
